# codelib

./: .clang-format  .gitignore  3d geometry.cpp  3d geometry.cpp~  CMakeLists.txt  README.md  binary_search.cpp  book.txt  computational geometry.cpp  computational geometry.cpp~  discretization.cpp  matrix_multiply_pow.cpp  random.cpp  rm.sh  three_division.cpp  update.sh
DFA/: ac_automation.cpp  ac_automation_matrix.cpp
RMQ&LCA/: LCA_online_bfs.cpp  LCA_online_dfs.cpp  RMQ_ST.cpp
combinatorial math/: bit_enumerate.cpp  combination.cpp
contest/: a.cc
data structures/: binary_indexed_tree.cpp  disjoint-sets.cpp  dsu.cpp  queue.cpp  suffix_array.cpp  trie.cpp  trie.cpp~
dynamic programming/: digits.cpp
examples/: grammar.cc  queue.cc  string.cc
graph theory/: SPFA(vector).cpp  SPFA(vector).cpp~  (+11 more)
src/: CMakeLists.txt  binary_search.cpp  binary_search.h  common_header.h  discretization.cc  discretizer.h  grammar.cc  grid.h  kmp.cc  kmp.cpp  matrix_multiply_pow.cc  random.cc  random.cpp  three_division.cc
src/combinatorial_math/: bit_enumerate.cc  combination.cc  combination.cpp
src/data_structures/: binary_indexed_tree.cc  disjoint_set.h  dsu.cc  queue.cc  suffix_array.cc  tree_dfn.cc  tree_dfn.cpp  trie.cc
src/dfa/: ac_automation.cc  ac_automation_matrix.cc  ac_automation_matrix.cpp
src/dynamic_programming/: digits.cc  digits_leading_zeros.cc
src/geometry/: computational_geometry.cc  geometry_3d.cc
src/graph/: dfn.cc  dijkstra_edge.cc  dijkstra_edge_pq.cc  dijkstra_vector_pq.cc  graph.h  prim.cc  shortest_path.h  struct_edge.cc  topological_order.cc
src/graph_theory/: dfn.cpp  dijkstra_edge.cc  dijkstra_edge_pq.cc  dijkstra_edge_pq.cpp  dijkstra_matrix.cc  floyd.cc  graph_vector.cc  graph_vector.cpp  spfa_vector.cc  struct_edge.cc
src/grid_move/: grid_move.cc  grid_move_bfs_pq.cc  grid_move_bfs_pq.cpp
src/io_accelerator/: read_int.cc
src/net_flow/: dinic.cc  hugary_dfs_list.cc  hugary_dfs_list.cpp  hugary_dfs_matrix.cc  min_cost_flow.cc  rng_58_dinic.cc  rng_58_dinic.cpp
src/number_theory/: find_divisors.cc  find_divisors.cpp  gcd.cc  gcd_extend.cc  miller_rabin.cc  mod_inverse_fermat.cc  mod_inverse_gcd.cc  multi_mod.cc  pollard_rho.cc  pow_mod.cc  prime_sieve.cc
src/rmq_lca/: lca_online_bfs.cc  lca_online_dfs.cc  lca_online_dfs.cpp  rmq_st.cc  rmq_st.cpp
src/segment_tree/: segment_tree_cover.cc  segment_tree_discrete.cc  segment_tree_general.cc  segment_tree_general.cpp  segment_tree_reserve.cc  segment_tree_reserve.cpp
src/stl/: algorithm  algorithm.cc  algorithm.cpp  map.cc  map.cpp  pair.cc  pair.cpp  queue  queue.cc  queue.cpp  set.cc  set.cpp  string.cpp  vector.cc  vector.cpp
tests/: CMakeLists.txt  test_binary_search.cc  test_binary_search.cpp  test_discretizer.cc  test_grid.cc
tests/data_structures/: test_disjoint_set.cc
tests/graph/: test_graph.cc  test_shortest_path.cc
(+28 files in other folders)
